--- a/front-end/src/component/Login/mobileLogin.css
+++ b/front-end/src/component/Login/mobileLogin.css
@@ -5,6 +5,7 @@
         display: flex;
         flex-direction: column;
         text-align: left;
+        gap: 2.5%;
     }
 
     .login-container form {
@@ -13,12 +14,14 @@
         height: 60%;
         width: 80%;
     }
-    .login-container button{
+
+    .login-container button {
         width: 50%;
         height: 12.5%;
         margin-top: 10%;
     }
-    form input{
+
+    form input {
         height: 30%;
         width: 80%;
     }
@@ -35,15 +38,25 @@
     }
 
     h2 {
-        font-size: 3.5rem;
+        font-size: 2.8rem;
         font-weight: 800;
         color: rgb(71, 182, 255);
         font-family: Arial, Helvetica, sans-serif;
         margin-top: 15%;
     }
+
     p {
         font-family: Arial, Helvetica, sans-serif;
         margin-left: 18%;
 
+    }
+
+    h1 {
+        font-size: 2.25rem;
+        font-style: italic;
+        font-weight: 800;
+        color: rgb(71, 182, 255);
+        font-family: "Playfair Display", serif;
+        display: block !important;
     }
 }
